[package]
name = "nil-server-types"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lints]
workspace = true

[dependencies]
jiff.workspace = true
nil-core.workspace = true
serde.workspace = true
strum.workspace = true
