[package]
name = "nil-server"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bon.workspace = true
clap.workspace = true
dashmap.workspace = true
derive_more.workspace = true
either.workspace = true
futures.workspace = true
itertools.workspace = true
jiff.workspace = true
jsonwebtoken.workspace = true
nil-core.workspace = true
nil-database.workspace = true
nil-log.workspace = true
nil-payload.workspace = true
nil-server-types.workspace = true
nil-util.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
