[package]
name = "nil-server"
publish = false
readme = "../../../README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
bon.workspace = true
dashmap.workspace = true
derive_more.workspace = true
either.workspace = true
futures.workspace = true
headers.workspace = true
itertools.workspace = true
jiff.workspace = true
jsonwebtoken.workspace = true
nil-core.workspace = true
nil-crypto.workspace = true
nil-log.workspace = true
nil-payload.workspace = true
nil-server-database.workspace = true
nil-server-types.workspace = true
nil-util.workspace = true
semver.workspace = true
serde.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
