[package]
name = "nil-util"
version = "0.1.1"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license-file]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[lints]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.bon]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.flate2]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true
