[package]
name = "nil-util"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
