[package]
name = "nil"
version = "0.1.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
itertools.workspace = true
nil-client.workspace = true
nil-core.workspace = true
nil-server.workspace = true
nil-util.workspace = true
remain.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-persisted-scope.workspace = true
tauri-plugin-prevent-default.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-window-state.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.tauri]
version = "2.7"
features = ["protocol-asset", "rustls-tls"]

[build-dependencies.tauri-build]
version = "2.3"
features = []
