[package]
name = "nil"
version = "0.1.1"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license-file]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[lib]
name = "nil_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.nil-client]
workspace = true

[dependencies.nil-core]
workspace = true

[dependencies.nil-server]
workspace = true

[dependencies.nil-util]
workspace = true

[dependencies.remain]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tauri-plugin-clipboard-manager]
workspace = true

[dependencies.tauri-plugin-dialog]
workspace = true

[dependencies.tauri-plugin-fs]
workspace = true

[dependencies.tauri-plugin-persisted-scope]
workspace = true

[dependencies.tauri-plugin-prevent-default]
workspace = true

[dependencies.tauri-plugin-process]
workspace = true

[dependencies.tauri-plugin-single-instance]
workspace = true

[dependencies.tauri-plugin-window-state]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.tauri]
version = "2.7"
features = ["image-png", "protocol-asset", "rustls-tls", "tray-icon"]

[build-dependencies.tauri-build]
version = "2.3"
features = []
