[package]
name = "nil"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "nil_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
itertools.workspace = true
nil-client.workspace = true
nil-core.workspace = true
nil-server.workspace = true
nil-util.workspace = true
remain.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-mobile.workspace = true
tauri-plugin-persisted-scope.workspace = true
tauri-plugin-pinia.workspace = true
tauri-plugin-process.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.tauri]
version = "2.8"
features = ["image-png", "protocol-asset", "rustls-tls", "tray-icon"]

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-prevent-default.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-window-state.workspace = true

[build-dependencies.tauri-build]
version = "2.4"
features = []
